GRAXConnect/main/default/objects/GRAX_Data_Record_Id__c/GRAX_Data_Record_Id__c.object-meta.xml
<CustomObject>
    <label>GRAX Data Record Id</label>
    <nameField>
        <displayFormat>GRAX-RecId-{000000000}</displayFormat>
        <label>GRAX Data Record Id Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX Data Record Ids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>