GRAXConnect/main/default/objects/GRAX_Data_Record_Id__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <label>Error Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>