GRAXConnect/main/default/objects/GRAX_Data_Record_Id__c/fields/GRAX_Data_Record__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Data_Record__c</fullName>
    <label>GRAX Data Record</label>
    <referenceTo>GRAX_Data_Record__c</referenceTo>
    <relationshipLabel>GRAX Data Record Ids</relationshipLabel>
    <relationshipName>GRAX_Data_Record_Ids</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>