GRAXConnect/main/default/objects/GRAX_Data_Record_Id__c/fields/Processed_Child_Index__c.field-meta.xml
<CustomField>
    <fullName>Processed_Child_Index__c</fullName>
    <description>Processed_Child_Index</description>
    <label>Processed Child Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>