GRAXConnect/main/default/objects/GRAX_Data_Record_Id__c/fields/SFDC_Id__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Id__c</fullName>
    <description>SFDC_Id</description>
    <label>SFDC Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>