GRAXConnect/main/default/objects/GRAX_Data_Record_Id__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Deleted</fullName>
            </value>
            <value>
                <fullName>Deleted with Master Parent</fullName>
            </value>
            <value>
                <fullName>Successfully Deleted</fullName>
            </value>
            <value>
                <fullName>Delete Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>